--- a/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
+++ b/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
@@ -1,5 +1,20 @@
 <template>
-    <lightning-button disabled={hasCasesInProgress} variant="brand" accesskey="h" label="Hent Ny STO" title="Hent Ny STO" icon-name="utility:upload" icon-position="right" class="" onclick={getNewSTOHandler}></lightning-button>
+    <lightning-layout class="slds-grid_align-center">
+        <lightning-layout-item class="slds-var-p-vertical_medium">
+            <lightning-button 
+            variant="brand" 
+            disabled={showSpinner} 
+            accesskey="h" 
+            label="Hent Ny STO" 
+            title="Hent Ny STO" 
+            icon-name="utility:upload" 
+            icon-position="left"
+            class="slds-var-p-horizontal_medium"
+            onclick={getNewSTOHandler}
+        ></lightning-button>
+        </lightning-layout-item>
+    </lightning-layout>
+        
     <template if:true={hasRecord}>
         <section class="slds-box slds-theme_default slds-is-relative" aria-labelledby="nav1">
             <lightning-layout size="12" class="slds-grid slds-wrap slds-var-p-bottom_small">
