--- a/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
+++ b/force-app/main/default/lwc/nksGetStoUtility/nksGetStoUtility.html
@@ -1,11 +1,5 @@
 <template>
-    <div if:false={betaPermission} class="slds-p-around_small">
-        <h1 class="slds-text-heading_medium">
-            Pilotfunksjonalitet for manuell plukking av STO. Funksjonen testes for øyeblikket og blir etter hvert
-            tilgjengelig for alle.
-        </h1>
-    </div>
-    <div if:true={betaPermission}>
+    <div>
         <lightning-layout class="slds-grid_align-center">
             <lightning-layout-item class="slds-var-p-vertical_medium">
                 <lightning-button
