--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -81,7 +81,7 @@
                             </template>
                         </template>
                         <template if:true={showspinner}>
-                            <div tabindex="0" class="spinner" aria-label="Sender melding. Vennligst vent.">
+                            <div tabindex="0" class="spinner" aria-label={spinnerText}>
                                 <div class="overflow-detector">
                                     <div class="overflow-detector__scroller">
                                         <div class="overflow-detector__inner">
