--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -7,7 +7,7 @@
         style="padding: 1rem 0rem 1rem 0rem; border: 1px solid var(--navds-semantic-color-border, #707070)"
     >
         <lightning-layout vertical-align="center" class="slds-size_1-of-1">
-            <div class="slds-is-relative" style="min-width: 88px">
+            <div class="slds-is-relative hideMobile" style="min-width: 88px">
                 <div class="centerCircle"></div>
                 <img
                     class="iconcolor slds-is-relative slds-show"
