--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -66,18 +66,18 @@
                                     Send
                                 </button>
                             </template>
-                            <template
-                                if:false={showTextArea}
-                                for:each={openThreadList}
-                                for:item="thread"
-                                for:index="index"
-                            >
-                                <c-sto-inbox-close-item
-                                    thread={thread}
-                                    key={thread.recordId}
-                                    index={index}
-                                    onclosethread={handleCloseThread}
-                                ></c-sto-inbox-close-item>
+                            <template if:false={showTextArea}>
+                                <h3 class="navds-heading navds-heading--medium leftAlign topGap">
+                                    Dine åpne dialoger om {selectedTheme}
+                                </h3>
+                                <template for:each={openThreadList} for:item="thread" for:index="index">
+                                    <c-sto-inbox-close-item
+                                        thread={thread}
+                                        key={thread.recordId}
+                                        index={index}
+                                        onclosethread={handleCloseThread}
+                                    ></c-sto-inbox-close-item>
+                                </template>
                             </template>
                         </template>
                         <template if:true={showspinner}>
