--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -17,7 +17,7 @@
                     style="margin: auto; width: 24px; margin-right: 32px; margin-left: 32px"
                 />
             </div>
-            <div>
+            <div class="mobilePadding">
                 <p class="typo-normal blokk-xxxs">
                     <lightning-formatted-date-time
                         value={thread.latestMessageDate}
