Show who closed STO

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -68,7 +68,7 @@
                             </template>
                             <template if:false={showTextArea}>
                                 <h2 class="navds-heading navds-heading--medium leftAlign topBigGap">
-                                    Dine åpne dialoger om {selectedTheme}
+                                    Dine åpne samtaler om {selectedTheme}
                                 </h2>
                                 <template for:each={openThreadList} for:item="thread" for:index="index">
                                     <c-sto-inbox-close-item
