Final styling and correct text

--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -3,7 +3,7 @@
         <div class="header">
             <h1 class="navds-heading navds-heading--2xlarge">{title}</h1>
         </div>
-        <div class="header">
+        <div class="header aroundGap">
             <c-nav-Button
                 url="https://www.nav.no/person/kontakt-oss/skriv-til-oss"
                 title="Skriv ny melding"
