--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="decorator-wrapper">
+    <div style="margin-bottom: 4rem">
         <div>
             <div class="header">
                 <h1 class="navds-heading navds-heading--2xlarge">Skriv til oss</h1>
