--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -46,7 +46,7 @@
                             </div>
                             <!-- Medskriv radiobutton -->
                             <div class="">
-                                <c-ds-radio style="text-align: left"></c-ds-radio>
+                                <c-ds-radio style="text-align: left" title="Testeron" options={test}></c-ds-radio>
                             </div>
                             <!-- Vilkaer checkbox -->
                             <div class="skjemaelement checkbox">
