--- a/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
+++ b/force-app/main/default/lwc/crmStoMessaging/crmStoMessaging.html
@@ -7,6 +7,7 @@
         show-close={showClose}
         english-text-template={englishTextTemplate}
         onenglisheventtwo={handleEnglishEventTwo}
+        check-medskriv={checkMedskriv}
     >
         <c-crm-sto-messaging-toolbar slot="toolbar" object-api-name={objectApiName}></c-crm-sto-messaging-toolbar>
     </c-crm-messaging-message-component>
