--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -47,7 +47,6 @@
                                 </div>
                                 <!-- Medskriv radiobutton -->
                                 <div class="">
-                                    <!-- Vilkaer checkbox -->
                                     <c-ds-radio
                                         style="text-align: left"
                                         title="Godtar du at NAV kan bruke samtalen til opplæring?"
@@ -61,6 +60,7 @@
                                             ></c-ds-help-text></div
                                     ></c-ds-radio>
                                 </div>
+                                <!-- Vilkaer checkbox -->
                                 <div class="skjemaelement checkbox">
                                     <c-community-checkbox
                                         label-text={label.acceptermtext}
@@ -69,7 +69,7 @@
                                     ></c-community-checkbox
                                     ><button
                                         onclick={showTerms}
-                                        class="slds-var-m-left_small lenke vilkar-link navds-link vilkar-link focusBtn"
+                                        class="slds-var-m-left_small vilkar-link navds-link focusBtn"
                                         tabindex="0"
                                     >
                                         {label.showtermstext}
