--- a/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
+++ b/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
@@ -1,8 +1,7 @@
 <template>
-    <div class="navds-accordion slds-var-m-bottom_large">
+    <!-- <div class="navds-accordion slds-var-m-bottom_large">
         <div class="navds-accordion__item">
             <button
-                onclick={togglevisible}
                 label={header}
                 aria-expanded={showpanel}
                 class="navds-accordion__header navds-heading navds-heading--small"
@@ -21,6 +20,53 @@
                             <lightning-formatted-rich-text value={body}></lightning-formatted-rich-text>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class={testNewClasses}>
+        <button onclick={togglevisible} class="navds-accordion__header" type="button" aria-expanded={showpanel}>
+            <span class="navds-accordion__header-content navds-heading navds-heading--small">{header}</span
+            ><svg
+                width="1em"
+                height="1em"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                focusable="false"
+                role="img"
+                aria-hidden="true"
+                class="navds-accordion__expand-icon"
+            >
+                <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
+                    fill="currentColor"
+                ></path></svg
+            ><svg
+                width="1em"
+                height="1em"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                focusable="false"
+                role="img"
+                aria-hidden="true"
+                class="navds-accordion__expand-icon navds-accordion__expand-icon--filled"
+            >
+                <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
+                    fill="currentColor"
+                ></path>
+            </svg>
+        </button>
+        <div aria-hidden={inverseShowpanel} style={testStyles} class={dropdownClass}>
+            <div class="expand-animation">
+                <div class="navds-accordion__content navds-body-long">
+                    <lightning-formatted-rich-text value={body}></lightning-formatted-rich-text>
                 </div>
             </div>
         </div>
